--- a/frontend/superAd.html
+++ b/frontend/superAd.html
@@ -230,9 +230,10 @@
                     <li><a href="dashboard.php" class="active"><span class="icon">📊</span>Tableau de bord</a></li>
                     <li><a href="gerer_clubs.php"><span class="icon">🏢</span>Gérer les clubs</a></li>
                     <li><a href="liste_admins.php"><span class="icon">👥</span>Admins des clubs</a></li>
-                    <li><a href="événements.php"><span class="icon">📈</span>Les événements</a></li>
-                    <li><a href="utilisateurs.php"><span class="icon">👥</span>Les utilisateurs de l'application</a></li>
-                    <li><a href="Emails.php"><span class="icon">📧</span>Envoyer un email</a></li>
+                    <li><a href="evenements.html"><span class="icon">📈</span>Les événements</a></li>
+                    <li><a href="utilisateurs.html"><span class="icon">👥</span>Les utilisateurs de l'application</a></li>
+                    <li><a href="emails.html"><span class="icon">📧</span>Envoyer un email</a></li>
+                    <li><a href="validations.html"><span class="icon">✅</span>Validations</a></li>
                     
                 </ul>
             </div>
@@ -280,8 +281,11 @@
                     <a href="gerer_clubs.php" class="action-btn">
                         <span>📋</span> Voir tous les clubs
                     </a>
-                    <a href="événements.php" class="action-btn">
+                    <a href="evenements.html" class="action-btn">
                         <span>📊</span> Voir les événements
+                    </a>
+                    <a href="validations.html" class="action-btn">
+                        <span>✅</span> Validations
                     </a>
                     
                 </div>
